sample/misc/error/eval_match_let-expr.bfr
let _ =
  let a :: b = {} in
  a

codegen []